# stock_repo

./: .gitignore  README.md  overview.html  pyproject.toml  run_stock_agents.bat  run_stock_agents.sh  userguide.html
docs/: architecture.md
docs/plans/: 2026-05-19-tradingagents-hermes-codex-port.md
src/stock_agents/: __init__.py  cli.py  doctor.py  paths.py
src/stock_agents/data/: collector.py  fundamentals.py  indicators.py  news.py  yfinance_client.py
src/stock_agents/domain/: enums.py
src/stock_agents/orchestration/: checkpoints.py  pipeline.py  repair.py  task_builder.py  validator.py
src/stock_agents/prompts/: base_system.md.j2  repair.md.j2  risk_aggressive.md.j2
src/stock_agents/reporting/: renderer.py
src/stock_agents/runners/: base.py  codex.py  hermes.py  mock.py
src/stock_agents/schemas/: facts.py  outputs.py  tasks.py
tests/: test_analyst_selection.py  test_cli_artifact_commands.py  test_cli_help.py  test_cli_phase_f.py  test_codex_runner_command.py  test_collect_cli.py  test_data_indicators.py  test_debate_rounds.py  test_doctor.py  test_fact_schema.py  test_hermes_runner_command.py  test_mock_pipeline.py  test_mock_runner.py  test_news_collector.py  test_output_validation.py  test_paths.py  test_repair_contract.py  test_report_renderer.py  test_resume_pipeline.py  test_resume_reconfiguration.py  test_risk_rounds.py  test_round_limits.py  test_task_contract.py  test_yfinance_client.py
