[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-agents"
version = "0.1.0"
description = "TradingAgents-style file-handoff stock analysis orchestrator for Hermes/Codex runners"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "typer>=0.9",
    "rich>=13",
    "jinja2>=3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
stock-agents = "stock_agents.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stock_agents = ["prompts/*.md.j2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
